<resources>
    <string name="app_name">Sports+</string>
    <string name="main_title"> Sports+</string>
    <string name="main_subtitle"> - Live &amp; Upcoming</string>

    <string name="l_home">Home</string>
    <string name="l_setting">Settings</string>

    <string name="tab_all">All</string>
    <string name="tab_football">Football</string>
    <string name="tab_basketball">Basketball</string>
    <string name="tab_tennis">Tennis</string>

    <string name="live_score">23\'</string>
    <string name="time1">Tomorrow 2:00 AM</string>
    <string name="time2">Sat,Mar 6, 8:30 PM</string>
    <string name="time3">Sat,Mar 6, 11:30 AM</string>
    <string name="game_name">Football,Premier League,Round 38</string>
    <string name="score_to_score">%d : %d</string>
    <string name="ball_fulham">Fulham</string>
    <string name="ball_tottenham">Tottenham</string>
    <string name="ball_burnley">Burnley</string>
    <string name="ball_aesenal">Aesenal</string>
    <string name="ball_sheffield">Sheffield United</string>
    <string name="ball_southampton">Southampton</string>

    <string name="league_premier">Premier League</string>
    <string name="league_bundesliga">Bundesliga</string>
    <string name="league_laliga">LaLiga</string>
    <string name="league_serie">Serie A</string>
    <string name="league_ligue_1">Ligue 1</string>

    <string name="team_fulham">Fulham</string>
    <string name="team_arsenal">Arsenal</string>
    <string name="team_sheffied_united">Sheffied United</string>
    <string name="team_southampton">Southampton</string>
    <string name="team_burnley">Burnley</string>
    <string name="team_chelsea">Chelsea</string>
    <string name="team_liverpool">Liverpool</string>
    <string name="team_crystal">Crystal Palace F…</string>


    <string name="alert_settings">Alert Settings</string>
    <string name="game_start">Game Start</string>
    <string name="real_time_score">Real-time Score</string>
    <string name="game_result">Game Result</string>
    <string name="ok">OK</string>
    <string name="add_your_favorite">Add your favorite team，never miss any schedule and updates ！</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="select_sports">Select your favorite sports</string>
    <string name="select_league">Select your favorite league</string>
    <string name="select_team">Select your favorite team</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="live">Live</string>
    <string name="vs">VS</string>

    <string name="alert_setting_content">You can set an alert for your favorite game to get notifications when the game starts or gets updates.</string>
</resources>